--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.13.0",
+    "react-toastify": "^11.0.5",
     "swiper": "^12.1.0",
     "tailwindcss": "^4.1.18"
   },
